2010-11-12  Raymond Penners  <raymond.penners@intenct.nl>

	* allauth/account/forms.py (BaseSignupForm.clean_email): With
	ACCOUNT_EMAIL_REQUIRED=False, empty email addresses were
	considered duplicates. Fixed.

2010-11-12  Raymond Penners  <raymond.penners@intenct.nl>

	* The existing migrations for allauth.openid were not compatible
	with MySQL due to the use of an URLField with max_length above
	255. The issue has now been addressed but unfortunately at the
	cost of the existing migrations for this app. Existing
	installations will have to be dealt with manually (altering the
	"identity" column of OpenIDAccount, deleting ghost migrations).